-v4.7.0pre11
- FIX: Major routed pipe bug breaking auto-crafting

v4.7.0pre10
- ADDED: Config option for particle effects on routed pipes
- FIX: Multipart lights incorrectly sensing redstone
- FIX: Crash when cutting Inverted Lamp blocks
- FIX: Auto Crafter eating up multi-use items
- FIX: Project Bench keeping multi-use items passed max damage
- FIX: Changing configs in-game does not save correctly

v4.7.0pre9
- FIX: Barrel crash when attaching routed pipes
- FIX: Item duplication exploit
- FIX: Bugged Framed Red Alloy Wire recipe
- FIX: Server hang when configuring some gates
- FIX: Electrotine Generator and Charging Bench not dropping items when broken
- FIX: Item hiding for routed pipes on barrels

v4.7.0pre8
- ADDED: Fuel Efficiency enchantment for jetpacks
- ADDED: Stock Keeper infinite stock option
- ADDED: Stock Keeper matching options
- FIX: Filtered Importer not saving filter
- FIX: Project Bench not pulling evenly from crafting slots
- FIX: Routed pipes only seeing top stack for barrels and deep storage units
- FIX: Items being routed to full inventories
- FIX: IC Gate crash when using 2D wire renderer
- FIX: IC NOT gates not cycling dead sides correctly
- CHANGE: Rebalanced motor power usage
- CHANGE: Rebalanced solar panel power generation

v4.7.0pre7
- ADDED: Project Bench
- ADDED: Auto Crafting Bench
- FIX: Filtered Importer merging unstackable items
- FIX: Lamps blocking mob spawning even when off
- FIX: Crafting tree reporting incorrent missing items
- FIX: Chip settings panels opening in inconvienient places
- CHANGE: Microblocks of inverted lamps will light up
- CHANGE: Crafting chip now extracts up to a stack
- CHANGE: Motors no longer continuously move blocks

v4.7.0pre6
- ADDED: Jetpack particles and models
- ADDED: Crafting Extension chip
- REMOVED: Routing chip upgrade system
- REMOVED: Routed Crafting pipe
- REMOVED: Routed Extension pipe
- FIX: Furnace recipe crash
- FIX: Inteface pipe keeping logic after removing chip